[package]
name = "aptmirs"
description = "A simple tool for mirroring apt/deb repositories"
version = "0.17.4"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/cyr/aptmirs"
keywords = ["debian", "repository", "apt", "mirror"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
async-channel = "2.3.1"
async-trait = "0.1.85"
bzip2 = "0.5.0"
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["cargo", "derive", "env"] }
compact_str = { version = "0.8.1", features = ["serde"] }
console = "0.15.10"
flate2 = "1.0.35"
hex = "0.4.3"
indicatif = "0.17.9"
md5 = "0.7.0"
pathdiff = "0.2.3"
pgp = "0.14.2"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["rustls-tls"] }
sha1 = "0.10.6"
sha2 = "0.10.8"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "fs"] }
walkdir = "2.5.0"
xz2 = "0.1.7"

[profile.release]
codegen-units = 1
lto = "fat" 
strip = "symbols"
panic = "abort"
