[package]
name = "aptmirs"
description = "A simple tool for mirroring apt/deb repositories"
authors = ["cyr"]
version = "0.18.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/cyr/aptmirs"
keywords = ["debian", "repository", "apt", "mirror"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.12"
async-channel = "2.5.0"
async-trait = "0.1.89"
bzip2 = "0.6.1"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["cargo", "derive", "env"] }
compact_str = { version = "0.9.0", features = ["serde"] }
console = "0.16.1"
flate2 = "1.1.5"
hex = "0.4.3"
indicatif = "0.18.3"
md5 = "0.8.0"
pathdiff = "0.2.3"
pgp = "0.18.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls-native-roots"] }
sha1 = "0.10.6"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "fs"] }
walkdir = "2.5.0"
xz2 = "0.1.7"

[profile.release]
codegen-units = 1
lto = "fat" 
strip = "symbols"
panic = "abort"
